--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   }
   
   .app {
-    min-height: 100vh;
+    height: 100vh;
     width: 100%;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 1), transparent), url(./assets/bitc.jpg);
     background-position: center;
